sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { var change=true
            do{
              for (i<-0 to getNombreValeurs-2)
              {if (!plusPetit (i,i+1)  )
                   {echange(i,i+1)
                    change=true}
               else {change=false}}
              while (change==true)
              
            }}       
